src/test/ui/vec/vec-res-add.stderr
error[E0369]: binary operation `+` cannot be applied to type `std::vec::Vec<R>`
  --> $DIR/vec-res-add.rs:26:13
   |
LL |     let k = i + j;
   |             ^^^^^
   |
   = note: an implementation of `std::ops::Add` might be missing for `std::vec::Vec<R>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
